AssetRipper.Translation.LlvmIR/DemangledNamesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DemangledNames.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AssetRipper.Translation.LlvmIR {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class DemangledNamesParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, EscapedString=2, SingleQuoteString=3, AccessModifier=4, Auto=5, 
		CallingConvention=6, Complex=7, NewOrDelete=8, Sizeof=9, TypeKeyword=10, 
		Bool=11, Char=12, Const=13, DeclTypeAuto=14, Double=15, Float=16, Int=17, 
		Int64=18, Int128=19, Long=20, Operator=21, Restrict=22, Short=23, Signed=24, 
		Static=25, Unsigned=26, Vector=27, Virtual=28, Void=29, AnonymousNamespace=30, 
		AndAnd=31, PipePipe=32, LeftParen=33, RightParen=34, Less=35, Greater=36, 
		Equals=37, Plus=38, Minus=39, Star=40, Slash=41, Modulo=42, And=43, Pipe=44, 
		Caret=45, Tilde=46, Exclamation=47, Colon=48, Comma=49, Dot=50, BackTick=51, 
		SingleQuote=52, DoubleQuote=53, LeftBrace=54, RightBrace=55, LeftBracket=56, 
		RightBracket=57, Identifier=58, Number=59, Whitespace=60, Newline=61;
	public const int
		RULE_function = 0, RULE_callingConvention = 1, RULE_functionPrefix = 2, 
		RULE_functionSuffix = 3, RULE_functionReturnType = 4, RULE_functionDeclaringScope = 5, 
		RULE_functionParameter = 6, RULE_functionParameters = 7, RULE_templateParameter = 8, 
		RULE_parenBoolExpr = 9, RULE_parenAtomExpr = 10, RULE_boolTemplateExpr = 11, 
		RULE_templateAtomExpr = 12, RULE_templateRelationalOperator = 13, RULE_simpleTemplateArg = 14, 
		RULE_template = 15, RULE_templateNotNull = 16, RULE_functionName = 17, 
		RULE_identifier = 18, RULE_functionIdentifier = 19, RULE_type = 20, RULE_typeIdentifier = 21, 
		RULE_qualifiedTypeIdentifier = 22, RULE_numericType = 23, RULE_integerType = 24, 
		RULE_operator = 25, RULE_operatorName = 26, RULE_arithmeticOperator = 27, 
		RULE_relationalOperator = 28, RULE_logicalOperator = 29, RULE_shiftOperator = 30;
	public static readonly string[] ruleNames = {
		"function", "callingConvention", "functionPrefix", "functionSuffix", "functionReturnType", 
		"functionDeclaringScope", "functionParameter", "functionParameters", "templateParameter", 
		"parenBoolExpr", "parenAtomExpr", "boolTemplateExpr", "templateAtomExpr", 
		"templateRelationalOperator", "simpleTemplateArg", "template", "templateNotNull", 
		"functionName", "identifier", "functionIdentifier", "type", "typeIdentifier", 
		"qualifiedTypeIdentifier", "numericType", "integerType", "operator", "operatorName", 
		"arithmeticOperator", "relationalOperator", "logicalOperator", "shiftOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'_Static'", null, null, null, "'auto'", null, null, null, "'sizeof'", 
		null, "'bool'", "'char'", "'const'", "'decltype(auto)'", "'double'", "'float'", 
		"'int'", "'__int64'", "'__int128'", "'long'", "'operator'", "'restrict'", 
		"'short'", "'signed'", "'static'", "'unsigned'", "'vector'", "'virtual'", 
		"'void'", "'(anonymous namespace)'", "'&&'", "'||'", "'('", "')'", "'<'", 
		"'>'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
		"'~'", "'!'", "':'", "','", "'.'", "'`'", "'''", "'\"'", "'{'", "'}'", 
		"'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "EscapedString", "SingleQuoteString", "AccessModifier", "Auto", 
		"CallingConvention", "Complex", "NewOrDelete", "Sizeof", "TypeKeyword", 
		"Bool", "Char", "Const", "DeclTypeAuto", "Double", "Float", "Int", "Int64", 
		"Int128", "Long", "Operator", "Restrict", "Short", "Signed", "Static", 
		"Unsigned", "Vector", "Virtual", "Void", "AnonymousNamespace", "AndAnd", 
		"PipePipe", "LeftParen", "RightParen", "Less", "Greater", "Equals", "Plus", 
		"Minus", "Star", "Slash", "Modulo", "And", "Pipe", "Caret", "Tilde", "Exclamation", 
		"Colon", "Comma", "Dot", "BackTick", "SingleQuote", "DoubleQuote", "LeftBrace", 
		"RightBrace", "LeftBracket", "RightBracket", "Identifier", "Number", "Whitespace", 
		"Newline"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DemangledNames.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DemangledNamesParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DemangledNamesParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DemangledNamesParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionPrefixContext functionPrefix() {
			return GetRuleContext<FunctionPrefixContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionReturnTypeContext functionReturnType() {
			return GetRuleContext<FunctionReturnTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallingConventionContext callingConvention() {
			return GetRuleContext<CallingConventionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclaringScopeContext functionDeclaringScope() {
			return GetRuleContext<FunctionDeclaringScopeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionNameContext functionName() {
			return GetRuleContext<FunctionNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftParen() { return GetToken(DemangledNamesParser.LeftParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionParametersContext functionParameters() {
			return GetRuleContext<FunctionParametersContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightParen() { return GetToken(DemangledNamesParser.RightParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunctionSuffixContext functionSuffix() {
			return GetRuleContext<FunctionSuffixContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 0, RULE_function);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			functionPrefix();
			State = 63;
			functionReturnType();
			State = 64;
			callingConvention();
			State = 65;
			functionDeclaringScope();
			State = 66;
			functionName();
			State = 67;
			Match(LeftParen);
			State = 68;
			functionParameters();
			State = 69;
			Match(RightParen);
			State = 70;
			functionSuffix();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallingConventionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CallingConvention() { return GetToken(DemangledNamesParser.CallingConvention, 0); }
		public CallingConventionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_callingConvention; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterCallingConvention(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitCallingConvention(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallingConvention(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CallingConventionContext callingConvention() {
		CallingConventionContext _localctx = new CallingConventionContext(Context, State);
		EnterRule(_localctx, 2, RULE_callingConvention);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				State = 72;
				Match(CallingConvention);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionPrefixContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AccessModifier() { return GetToken(DemangledNamesParser.AccessModifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(DemangledNamesParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Virtual() { return GetToken(DemangledNamesParser.Virtual, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Static() { return GetToken(DemangledNamesParser.Static, 0); }
		public FunctionPrefixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionPrefix; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterFunctionPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitFunctionPrefix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionPrefix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionPrefixContext functionPrefix() {
		FunctionPrefixContext _localctx = new FunctionPrefixContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionPrefix);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 75;
				Match(AccessModifier);
				State = 76;
				Match(Colon);
				}
				break;
			}
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 79;
				_la = TokenStream.LA(1);
				if ( !(_la==Static || _la==Virtual) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionSuffixContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Const() { return GetToken(DemangledNamesParser.Const, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftParen() { return GetToken(DemangledNamesParser.LeftParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(DemangledNamesParser.Dot, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Number() { return GetToken(DemangledNamesParser.Number, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightParen() { return GetToken(DemangledNamesParser.RightParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode And() { return GetToken(DemangledNamesParser.And, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AndAnd() { return GetToken(DemangledNamesParser.AndAnd, 0); }
		public FunctionSuffixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionSuffix; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterFunctionSuffix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitFunctionSuffix(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionSuffix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionSuffixContext functionSuffix() {
		FunctionSuffixContext _localctx = new FunctionSuffixContext(Context, State);
		EnterRule(_localctx, 6, RULE_functionSuffix);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Const) {
				{
				State = 82;
				Match(Const);
				}
			}

			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AndAnd || _la==And) {
				{
				State = 85;
				_la = TokenStream.LA(1);
				if ( !(_la==AndAnd || _la==And) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LeftParen) {
				{
				State = 88;
				Match(LeftParen);
				State = 89;
				Match(Dot);
				State = 90;
				Match(Number);
				State = 91;
				Match(RightParen);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionReturnTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FunctionReturnTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionReturnType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterFunctionReturnType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitFunctionReturnType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionReturnType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionReturnTypeContext functionReturnType() {
		FunctionReturnTypeContext _localctx = new FunctionReturnTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionReturnType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 94;
				type(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclaringScopeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedTypeIdentifierContext qualifiedTypeIdentifier() {
			return GetRuleContext<QualifiedTypeIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Colon() { return GetTokens(DemangledNamesParser.Colon); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon(int i) {
			return GetToken(DemangledNamesParser.Colon, i);
		}
		public FunctionDeclaringScopeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaringScope; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaringScope(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDemangledNamesListener typedListener = listener as IDemangledNamesListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaringScope(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDemangledNamesVisitor<TResult> typedVisitor = visitor as IDemangledNamesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaringScope(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclaringScopeContext functionDeclaringScope() {
		FunctionDeclaringScopeContext _localctx = new FunctionDeclaringScopeContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionDeclaringScope);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 97;
				qualifiedTypeIdentifier(0);
				State = 98;
				Match(Colon);
				State = 99;
				Match(Colon);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
